# ros2_robot_middleware

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  test.sh
.github/workflows/: ci.yml  test.yml
action/: MoveToPose.action
config/: grafana_dashboard.json  sensors.yaml
config/sros2/: governance.p7s
doc/: 01-prd.md  03-adr.md  06-dds-customization.md  07-observability-design.md  07-roadmap.md  08-observability-usage.md  09-hal-design.md  ARCHITECTURE.md  CODE-QUALITY-AUDIT.md  COMPONENT-GAP.md  DDD-REVIEW.md  ITERATION.md  appendix.md  data-architecture.md  deployment.md  interfaces.md  non-functional.md  requirements.md  risks.md  workflow-2025-06-15.md  workflow-2026-06-21.md
doc/adr/: 03-adr.md
doc/archive/: 02-design-doc.md  04-cost-estimation.md
doc/benchmark_data/: Fast-DDS.csv
doc/guides/: 06-dds-customization.md  07-observability-design.md  08-observability-usage.md  09-hal-design.md  10-fastdds-extension-points.md
doc/interview/自变量机器人/: 01-sensor-degradation.md  02-kalman-filter.md  03-岗位面试备战.md  04-部署架构.md
doc/subsystems/: actuation-pipeline.md  communication.md  configuration.md  decision-pipeline.md  fusion-pipeline.md  health-monitor.md  observability.md  sensor-pipeline.md  tf2-integration.md
include/ros2_robot_middleware/: aliases.hpp  camera_node.hpp  decision_node.hpp  fleet_manager_node.hpp  fusion_node.hpp  health_monitor_node.hpp  imu_node.hpp  kalman_filter.hpp  lidar_node.hpp  motor_ctrl_node.hpp  robot_middleware.hpp  test_hooks.hpp
include/ros2_robot_middleware/application/: execution_service.hpp  monitoring_service.hpp  perception_service.hpp  planning_service.hpp
include/ros2_robot_middleware/domain/: transform_provider.hpp
include/ros2_robot_middleware/infrastructure/: fusion_node.hpp  health_monitor_node.hpp  imu_node.hpp  lidar_node.hpp  tf2_transform_provider.hpp
include/ros2_robot_middleware/observability/: log_event.hpp  (+7 more)
install/: local_setup.sh  setup.sh
launch/: fleet_multi.launch.py  simulation.launch.py  system.launch.py  system_secure.launch.py
log/: latest_build  latest_test
mdDoc/: 01-prd.md  02-design-doc.md  04-cost-estimation.md  05-ros2-guide.md  06-dds-customization.md  workflow-2025-06-15.md  workflow-2026-06-17.md
mdDoc/benchmark_data/: CycloneDDS.csv
msg/: CameraImage.msg  ImuData.msg  LidarScan.msg  Object.msg  PerceptionObjects.msg
project/: Makefile
quality/: README.md  lsan.supp  quality.sh
quality/data/: coverage.prev.txt
quality/scripts/: run_tests.sh  static_analysis.sh
quality/src/: test_dbscan.cpp  test_decision.cpp  test_fusion.cpp  test_helpers.hpp  test_motor_ctrl.cpp  test_sensor_nodes.cpp  test_tracker.cpp
scripts/: benchmark_rmw.sh  build.sh  setup_deps.sh
src/: camera_main.cpp  camera_node.cpp  compute_container.cpp  decision_main.cpp  decision_node.cpp  fleet_manager_main.cpp  fleet_manager_node.cpp  fusion_main.cpp  fusion_node.cpp  health_monitor_main.cpp  health_monitor_node.cpp  imu_main.cpp  imu_node.cpp  lidar_main.cpp  lidar_node.cpp  motor_ctrl_main.cpp  motor_ctrl_node.cpp
src/infrastructure/: camera_main.cpp  compute_container.cpp  decision_main.cpp  decision_node.cpp  fusion_main.cpp  fusion_node.cpp  health_monitor_node.cpp  imu_main.cpp  lidar_node.cpp  motor_ctrl_main.cpp  motor_ctrl_node.cpp
src/nodes/: camera_node.cpp  decision_node.cpp  fleet_manager_main.cpp  fleet_manager_node.cpp  fusion_node.cpp  health_monitor_main.cpp  imu_node.cpp  lidar_main.cpp
test/: CMakeLists.txt  README.md  coverage.sh  test.sh  test_fusion.cpp  test_kalman_filter.cpp  test_monitoring.cpp  test_observability.cpp  test_robot_middleware.cpp  test_sensor_hal.cpp  test_sensor_nodes.cpp
test/coverage/: coverage.prev.txt  coverage_full.txt
test/coverage/html/: cmd_line  index-sort-f.html  index.html
test/coverage/html/application/: execution_service.hpp.func-c.html  execution_service.hpp.func.html  index-sort-l.html  monitoring_service.hpp.func.html  monitoring_service.hpp.gcov.html  perception_service.hpp.func-c.html  perception_service.hpp.func.html  perception_service.hpp.gcov.html  planning_service.hpp.func-c.html  planning_service.hpp.func.html  planning_service.hpp.gcov.html
test/coverage/html/domain/execution/: index-sort-l.html
test/coverage/html/domain/monitoring/: heartbeat_analyzer.hpp.func-c.html  heartbeat_analyzer.hpp.func.html  heartbeat_analyzer.hpp.gcov.html  index-sort-f.html  recovery_policy.hpp.func-c.html  recovery_policy.hpp.func.html
test/coverage/html/domain/perception/: cluster_detector.hpp.func.html  cluster_detector.hpp.gcov.html  degradation_policy.hpp.func-c.html  degradation_policy.hpp.func.html  degradation_policy.hpp.gcov.html  index-sort-l.html  index.html  kalman_filter.hpp.func-c.html  kalman_filter.hpp.func.html  sensor_interface.hpp.func-c.html
test/coverage/html/domain/planning/: index-sort-f.html  preempt_policy.hpp.func-c.html  preempt_policy.hpp.func.html  preempt_policy.hpp.gcov.html  target_selector.hpp.func-c.html  target_selector.hpp.func.html  target_selector.hpp.gcov.html
test/coverage/html/home/guang/code/ros2_ws/src/ros2_amr_framework/src/infrastructure/: camera_node.cpp.func-c.html  camera_node.cpp.func.html  camera_node.cpp.gcov.html  decision_node.cpp.func-c.html  decision_node.cpp.func.html  decision_node.cpp.gcov.html  fusion_node.cpp.func-c.html  fusion_node.cpp.func.html  imu_node.cpp.func-c.html  index-sort-f.html  index.html  lidar_node.cpp.func-c.html  lidar_node.cpp.func.html  lidar_node.cpp.gcov.html  motor_ctrl_node.cpp.func.html  motor_ctrl_node.cpp.gcov.html
test/coverage/html/infrastructure/sensors/: index-sort-f.html  index-sort-l.html  index.html  simulated_sensors.hpp.func.html
test/coverage/html/observability/: index-sort-f.html  index-sort-l.html  index.html  metrics_registry.hpp.func-c.html  metrics_registry.hpp.gcov.html  ring_buffer.hpp.func-c.html  ring_buffer.hpp.func.html  tracer.hpp.func-c.html  tracer.hpp.func.html
toolkit/: Dockerfile  docker-compose.yml
toolkit/scripts/: entrypoint.sh  health-check.sh
worlds/: amr.sdf  warehouse.sdf
(+180 files in other folders)
